minor fix on mobile view

--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -99,7 +99,6 @@
       margin-bottom: 84px;
       &__img {
         width: 100%;
-        border: 1px solid red;
         margin-bottom: 12px;
       }
       &__duration {
